--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#"><strong>Tabela de Jogos</strong></a>
                   </li>
-                </ul>
-                <span class="navbar-text">
-                  Copa do mundo 2022
-                </span>
               </div>
             </div>
           </nav>
     </nav>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <section id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item">
             <img src="./Assets/2022 copa.jpg" alt="Copa 2022" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
@@ -48,6 +44,9 @@
         <div class="carousel-item">
             <img src="./Assets/copa 2022 catar.webp" alt="rumo ao hexa" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
         </div>
+        <div class="carousel-item active">
+            <img src="./Assets/rumo ao hexa.webp" alt="Copa 2022 no catar" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
+        </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -57,6 +56,6 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Próximo</font></font></span>
       </button>
-    </div>
+    </section>
   </body>
 </html>
