atualização de jogos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#"><strong>Seleções participantes</strong></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><strong>Tabela de Jogos</strong></a>
+                    <a class="nav-link" href="./HTML/jogos.html"><strong>Tabela de Jogos</strong></a>
                   </li>
               </div>
             </div>
