--- a/HTML/jogos.html
+++ b/HTML/jogos.html
@@ -21,6 +21,28 @@
     <title>Jogos | Copa do mundo 2022</title>
   </head>
   <body>
+    <nav>
+        <nav class="navbar navbar-expand-lg bg-yellow">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="../Assets/Confederação_Brasileira_de_Futebol_2019.svg" alt="Logo da seleção Brasileira" width="60px"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html"><strong>Home</strong></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><strong>Seleções participantes</strong></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./HTML/jogos.html"><strong>Tabela de Jogos</strong></a>
+                  </li>
+              </div>
+            </div>
+          </nav>
+    </nav>
     <main class="box-jogos-titulo">
         <h2>
             Jogos da seleção Brasileira
