atualização de cores de fundo

--- a/HTML/jogos.html
+++ b/HTML/jogos.html
@@ -21,7 +21,7 @@
     <title>Jogos | Copa do mundo 2022</title>
   </head>
   <body>
-    <nav>
+    <nav class="box-jogos-menu">
         <nav class="navbar navbar-expand-lg bg-yellow">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="../Assets/Confederação_Brasileira_de_Futebol_2019.svg" alt="Logo da seleção Brasileira" width="60px"></a>
