--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <nav>
+    <nav class="box-jogos-menu">
         <nav class="navbar navbar-expand-lg bg-yellow">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="./Assets/Confederação_Brasileira_de_Futebol_2019.svg" alt="Logo da seleção Brasileira" width="60px"></a>
