atualização de footer

--- a/HTML/jogos.html
+++ b/HTML/jogos.html
@@ -79,5 +79,46 @@
         </div>
       </div>
     </section>
+    <footer>
+        <p>
+          &copy; Todos os direitos reservados - Michael Antonio da Silva - 2022
+        </p>
+        <div>
+          <a
+            class="icones"
+            href="https://www.linkedin.com/in/michael-antonio-32a981108/"
+          >
+            <img
+              src="../Assets/linkedin.svg"
+              alt="icone do linkdin"
+              width="25px"
+            />
+          </a>
+          <a class="icones" href="https://web.whatsapp.com/">
+            <img
+              src="../Assets/whatsapp.svg"
+              alt="icone do whatsapp"
+              width="25px"
+            />
+          </a>
+          <a
+            class="icones"
+            href="https://www.instagram.com/invites/contact/?i=1lusto8clw5bq&utm_content=617kd1t"
+          >
+            <img
+              src="../Assets/instagram.svg"
+              alt="icone do instagram"
+              width="25px"
+            />
+          </a>
+          <a class="icones" href="https://github.com/Michaelantoniodev">
+            <img
+              src="../Assets/github.svg"
+              alt="icone do github"
+              width="25px"
+            />
+          </a>
+        </div>
+      </footer>
   </body>
 </html>
