--- a/index.html
+++ b/index.html
@@ -57,5 +57,46 @@
         <span class="visually-hidden"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Próximo</font></font></span>
       </button>
     </section>
+    <footer>
+      <p>
+        &copy; Todos os direitos reservados - Michael Antonio da Silva - 2022
+      </p>
+      <div>
+        <a
+          class="icones"
+          href="https://www.linkedin.com/in/michael-antonio-32a981108/"
+        >
+          <img
+            src="./icones e imagens/linkedin.svg"
+            alt="icone do linkdin"
+            width="25px"
+          />
+        </a>
+        <a class="icones" href="https://web.whatsapp.com/">
+          <img
+            src="./icones e imagens/whatsapp.svg"
+            alt="icone do whatsapp"
+            width="25px"
+          />
+        </a>
+        <a
+          class="icones"
+          href="https://www.instagram.com/invites/contact/?i=1lusto8clw5bq&utm_content=617kd1t"
+        >
+          <img
+            src="./icones e imagens/instagram.svg"
+            alt="icone do instagram"
+            width="25px"
+          />
+        </a>
+        <a class="icones" href="https://github.com/Michaelantoniodev">
+          <img
+            src="./icones e imagens/github.svg"
+            alt="icone do github"
+            width="25px"
+          />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
