--- a/HTML/jogos.html
+++ b/HTML/jogos.html
@@ -63,7 +63,7 @@
           </div>
           <div class="col">
             <div class="resultado" >
-                <p>________    X    ________</p>
+                <p>_______   X   _______</p>
                 <p>Dia 24/11/2022 ás 16:00</p>
             
             </div>
@@ -121,4 +121,5 @@
         </div>
       </footer>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </html>
