--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>Copa do mundo 2022 | Catar</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <nav class="box-jogos-menu">
@@ -67,14 +66,14 @@
           href="https://www.linkedin.com/in/michael-antonio-32a981108/"
         >
           <img
-            src="./icones e imagens/linkedin.svg"
+            src="./Assets/linkedin.svg"
             alt="icone do linkdin"
             width="25px"
           />
         </a>
         <a class="icones" href="https://web.whatsapp.com/">
           <img
-            src="./icones e imagens/whatsapp.svg"
+            src="./Assets/whatsapp.svg"
             alt="icone do whatsapp"
             width="25px"
           />
@@ -84,14 +83,14 @@
           href="https://www.instagram.com/invites/contact/?i=1lusto8clw5bq&utm_content=617kd1t"
         >
           <img
-            src="./icones e imagens/instagram.svg"
+            src="./Assets/instagram.svg"
             alt="icone do instagram"
             width="25px"
           />
         </a>
         <a class="icones" href="https://github.com/Michaelantoniodev">
           <img
-            src="./icones e imagens/github.svg"
+            src="./Assets/github.svg"
             alt="icone do github"
             width="25px"
           />
@@ -99,4 +98,5 @@
       </div>
     </footer>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </html>
