--- a/HTML/jogos.html
+++ b/HTML/jogos.html
@@ -63,7 +63,7 @@
           </div>
           <div class="col">
             <div class="resultado" >
-                <p>_______   X   _______</p>
+                <p>   X   </p>
                 <p>Dia 24/11/2022 ás 16:00</p>
             
             </div>
@@ -80,44 +80,46 @@
       </div>
     </section>
     <footer>
-        <p>
-          &copy; Todos os direitos reservados - Michael Antonio da Silva - 2022
-        </p>
         <div>
-          <a
-            class="icones"
-            href="https://www.linkedin.com/in/michael-antonio-32a981108/"
-          >
-            <img
-              src="../Assets/linkedin.svg"
-              alt="icone do linkdin"
-              width="25px"
-            />
-          </a>
-          <a class="icones" href="https://web.whatsapp.com/">
-            <img
-              src="../Assets/whatsapp.svg"
-              alt="icone do whatsapp"
-              width="25px"
-            />
-          </a>
-          <a
-            class="icones"
-            href="https://www.instagram.com/invites/contact/?i=1lusto8clw5bq&utm_content=617kd1t"
-          >
-            <img
-              src="../Assets/instagram.svg"
-              alt="icone do instagram"
-              width="25px"
-            />
-          </a>
-          <a class="icones" href="https://github.com/Michaelantoniodev">
-            <img
-              src="../Assets/github.svg"
-              alt="icone do github"
-              width="25px"
-            />
-          </a>
+          <p>
+            &copy; Todos os direitos reservados - Michael Antonio da Silva - 2022
+          </p>
+          <div>
+            <a
+              class="icones"
+              href="https://www.linkedin.com/in/michael-antonio-32a981108/"
+            >
+              <img
+                src="../Assets/linkedin.svg"
+                alt="icone do linkdin"
+                width="25px"
+              />
+            </a>
+            <a class="icones" href="https://web.whatsapp.com/">
+              <img
+                src="../Assets/whatsapp.svg"
+                alt="icone do whatsapp"
+                width="25px"
+              />
+            </a>
+            <a
+              class="icones"
+              href="https://www.instagram.com/invites/contact/?i=1lusto8clw5bq&utm_content=617kd1t"
+            >
+              <img
+                src="../Assets/instagram.svg"
+                alt="icone do instagram"
+                width="25px"
+              />
+            </a>
+            <a class="icones" href="https://github.com/Michaelantoniodev">
+              <img
+                src="../Assets/github.svg"
+                alt="icone do github"
+                width="25px"
+              />
+            </a>
+          </div>
         </div>
       </footer>
   </body>
