atualização de eventos

--- a/HTML/jogos.html
+++ b/HTML/jogos.html
@@ -25,13 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html"><strong>Home</strong></a>
+              <a class="nav-link active" aria-current="page" href="../index.html"><strong>Pagina inicial</strong></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><strong>Seleções participantes</strong></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./HTML/jogos.html"><strong>Tabela de Jogos</strong></a>
+              <a class="nav-link" href="./HTML/jogos.html"><strong>Tabela de Jogos do Brasil</strong></a>
             </li>
         </div>
       </div>
@@ -53,7 +50,7 @@
         </div>
         <div class="col">
           <div class="resultado">
-            <p> X </p>
+            <p>2 X 0</p>
             <p>Dia 24/11/2022 ás 16:00</p>
 
           </div>
@@ -69,11 +66,13 @@
       </div>
     </div>
   </section>
+  <div class="box-jogos-menu">
+    <h2>Melhores momentos</h2>
+  </div>
   <div class="videos">
-    <iframe width="410" height="259" src="https://www.youtube.com/embed/wyUrRVk_DEc?start=6" title="YouTube video player"
-    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen>
-  </iframe>
+    <iframe width="413" height="259" src="https://www.youtube.com/embed/_VCSlZ2n42o" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
   </div>
   <footer>
     <div>
