--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/css-de-controle.css">
-    <title>Copa do mundo 2022 | Catar</title>
+    <title>Copa do mundo 2022 | Quatar</title>
   </head>
   <body>
     <nav class="box-jogos-menu">
@@ -23,9 +23,6 @@
                     <a class="nav-link active" aria-current="page" href="#"><strong>Home</strong></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><strong>Seleções participantes</strong></a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="./HTML/jogos.html"><strong>Tabela de Jogos</strong></a>
                   </li>
               </div>
@@ -35,16 +32,13 @@
     <section id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item">
-            <img src="./Assets/2022 copa.jpg" alt="Copa 2022" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
+            <img src="./Assets/neymar.jpeg" alt="Copa 2022" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
         </div>
         <div class="carousel-item active">
-            <img src="./Assets/world cup catar.png" alt="Copa 2022 no catar" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
+            <img src="./Assets/brasilll.jpg" alt="Copa 2022 no catar" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
         </div>
         <div class="carousel-item">
-            <img src="./Assets/copa 2022 catar.webp" alt="rumo ao hexa" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
-        </div>
-        <div class="carousel-item active">
-            <img src="./Assets/rumo ao hexa.webp" alt="Copa 2022 no catar" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
+            <img src="./Assets/richarlison.jpg" alt="rumo ao hexa" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
