--- a/HTML/jogos.html
+++ b/HTML/jogos.html
@@ -69,11 +69,43 @@
   <div class="box-jogos-menu">
     <h2>Melhores momentos</h2>
   </div>
-  <div class="videos">
-    <iframe width="413" height="259" src="https://www.youtube.com/embed/_VCSlZ2n42o" title="YouTube video player"
+    <div class="videos">
+      <iframe width="413" height="259" src="https://www.youtube.com/embed/_VCSlZ2n42o" title="YouTube video player"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
-  </div>
+    </div>
+  <section class="box-jogos">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <img class="bandeira-especial" src="../Assets/Flag_of_Brazil.webp" alt="bandeira Brasileira" />
+          <p>
+            <strong>BRASIL</strong>
+          </p>
+        </div>
+        <div class="col">
+          <div class="resultado">
+            <p> X </p>
+            <p>Dia 28/11/2022 ás 13:00</p>
+
+          </div>
+
+
+        </div>
+        <div class="col">
+          <img class="bandeira" src="../Assets/suica_.webp" alt="bandeira da SUÍÇA" />
+          <p>
+            <strong>SUÍÇA</strong>
+          </p>
+        </div>
+        <div class="videos">
+          <iframe width="413" height="259" src="https://www.youtube.com/embed/Wsco9KhKr-k" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
   <footer>
     <div>
       <p>
